--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@ body {margin:2px;}
 
 #frame
 {
-    margin: 40px;
+    margin: 10px;
+    margin-top: 30px;
 }
 #frame:hover{
     box-shadow: 0px 0px 10px gray;
