--- a/style.css
+++ b/style.css
@@ -6,6 +6,12 @@ body {margin:2px;}
    color: black;
 }
 
+#frame
+{
+   margin-left: 7px;
+    margin-top: 30px;
+}
+
 #frame:hover{
     box-shadow: 0px 0px 10px gray;
 }
